--- a/app/src/main/res/layout/item_address.xml
+++ b/app/src/main/res/layout/item_address.xml
@@ -30,7 +30,7 @@
                 android:id="@+id/isDefault"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="[ Default ]"
+                android:text="[ Mặc định ]"
                 android:textColor="@color/light_green"
                 android:textStyle="bold" />
             <ImageView
