--- a/app/src/main/res/layout/fragment_detail_product.xml
+++ b/app/src/main/res/layout/fragment_detail_product.xml
@@ -248,6 +248,14 @@
                         android:background="@drawable/bg_detail_component"
                         android:orientation="vertical"
                         android:padding="20dp">
+                        <androidx.appcompat.widget.AppCompatButton
+                            android:layout_marginVertical="5dp"
+                            android:id="@+id/compatibility"
+                            android:text="@string/xem_t_ng_h_p_ngay"
+                            android:background="@drawable/bg_light_screen"
+                            android:textColor="@color/white"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/colorProperty"
