--- a/app/src/main/res/layout/activity_check_compatibility.xml
+++ b/app/src/main/res/layout/activity_check_compatibility.xml
@@ -4,6 +4,12 @@
         <variable
             name="viewModel"
             type="com.example.aposs_buyer.viewmodel.CheckCompatibilityViewModel" />
+        <variable
+            name="view"
+            type="android.view.View" />
+        <variable
+            name="status"
+            type="com.example.aposs_buyer.utils.LoadingStatus" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -69,7 +75,7 @@
                 android:layout_height="match_parent">
                 <LinearLayout
                     android:layout_marginVertical="5dp"
-                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginHorizontal="15dp"
                     android:layout_width="match_parent"
                     android:orientation="vertical"
                     android:layout_height="match_parent">
@@ -134,6 +140,7 @@
                     <EditText
                         android:id="@+id/dateOfBirth"
                         android:layout_marginVertical="5dp"
+                        android:text="@={viewModel.customerBirthDate}"
                         android:autofillHints="creditCardExpirationDate"
                         android:inputType="date"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -146,7 +153,93 @@
                         android:paddingHorizontal="15dp"
                         android:textSize="18sp"
                         tools:ignore="LabelFor" />
+                    <RelativeLayout
+                        android:orientation="horizontal"
+                        android:layout_marginVertical="5dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/chooseGenderLabel"
+                            android:layout_centerVertical="true"
+                            android:textStyle="bold"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/ch_n_gi_i_t_nh_c_a_b_n"
+                            android:textColor="@color/black"
+                            android:textSize="18sp" />
+                        <com.google.android.material.textfield.TextInputLayout
+                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
+                            android:layout_width="match_parent"
+                            android:layout_toEndOf="@id/chooseGenderLabel"
+                            android:layout_marginStart="10dp"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/bg_edit_user_detail"
+                            android:textSize="18sp"
+                            app:boxStrokeWidthFocused="0dp"
+                            app:endIconDrawable="@drawable/ic_expand_more">
+
+                            <AutoCompleteTextView
+                                android:id="@+id/actv_gender"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:backgroundTint="@android:color/transparent"
+                                android:gravity="center_vertical"
+                                android:inputType="none"
+                                android:paddingVertical="2dp"
+                                android:textSize="18sp"
+                                tools:ignore="LabelFor" />
+                        </com.google.android.material.textfield.TextInputLayout>
+                    </RelativeLayout>
+                    <LinearLayout
+                        android:visibility="@{viewModel.status == status.Success? view.VISIBLE: view.GONE}"
+                        android:id="@+id/resultLayout"
+                        android:orientation="vertical"
+                        android:layout_marginVertical="5dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                            <TextView
+                                android:id="@+id/destinyLabel"
+                                android:textSize="18sp"
+                                android:textStyle="bold"
+                                android:text="@string/your_destiny"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                            <TextView
+                                android:id="@+id/customerNature"
+                                android:layout_toEndOf="@id/destinyLabel"
+                                android:layout_alignParentEnd="true"
+                                android:layout_marginStart="5dp"
+                                android:text="@{viewModel.customerNature.toString()}"
+                                android:textSize="18sp"
+                                android:textStyle="bold"
+                                android:gravity="end"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                        </RelativeLayout>
+                        <TextView
+                            android:layout_marginVertical="5dp"
+                            android:text="@string/your_suitable"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                    </LinearLayout>
+                    <TextView
+                        android:id="@+id/errorGuild"
+                        android:textSize="18sp"
+                        android:layout_marginVertical="5dp"
+                        android:textColor="@color/red"
+                        android:visibility="@{viewModel.status == status.Fail? view.VISIBLE: view.GONE}"
+                        android:text="@{viewModel.messageGuild}"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
                     <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/seeNow"
+                        android:visibility="@{viewModel.status == status.Init? view.VISIBLE: view.GONE}"
                         android:layout_marginVertical="5dp"
                         android:text="@string/xem_ngay"
                         android:textSize="18sp"
@@ -154,6 +247,29 @@
                         android:background="@drawable/bg_light_screen"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
+
+                    <LinearLayout
+                        android:visibility="@{viewModel.status == status.Loading? view.VISIBLE: view.GONE}"
+                        android:id="@+id/loadingContent"
+                        android:orientation="vertical"
+                        android:layout_marginVertical="50dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <ProgressBar
+                            android:layout_marginVertical="5dp"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"/>
+                        <TextView
+                            android:textSize="18sp"
+                            android:textColor="@color/gray"
+                            android:layout_marginVertical="5dp"
+                            android:gravity="center"
+                            android:text="@string/nature_loading_message"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+                    </LinearLayout>
+
                 </LinearLayout>
             </androidx.core.widget.NestedScrollView>
         </RelativeLayout>
